--- a/app/src/main/res/layout/contents_management.xml
+++ b/app/src/main/res/layout/contents_management.xml
@@ -41,7 +41,7 @@
             android:layout_height="36dp"
             android:layout_margin="5sp"
             android:src="@drawable/arcanist"
-            android:background="@color/black"/>
+            app:tint="@color/black"/>
 
         <ImageView
             android:id="@+id/character2"
@@ -49,7 +49,7 @@
             android:layout_height="40sp"
             android:layout_margin="5sp"
             android:src="@drawable/soulmaster"
-            android:background="@color/black"/>
+            app:tint="@color/black"/>
       
         <ImageView
             android:id="@+id/character3"
@@ -57,7 +57,7 @@
             android:layout_height="40sp"
             android:layout_margin="5sp"
             android:src="@drawable/reaper"
-            android:background="@color/black"/>
+            app:tint="@color/black"/>
       
         <ImageView
             android:id="@+id/character4"
@@ -65,7 +65,7 @@
             android:layout_height="40sp"
             android:layout_margin="5sp"
             android:src="@drawable/blade"
-            android:background="@color/black"/>
+            app:tint="@color/black"/>
       
         <ImageView
             android:id="@+id/character5"
@@ -73,7 +73,7 @@
             android:layout_height="40sp"
             android:layout_margin="5sp"
             android:src="@drawable/warlord"
-            android:background="@color/black"/>
+            app:tint="@color/black"/>
       
         <ImageView
             android:id="@+id/character6"
@@ -81,7 +81,7 @@
             android:layout_height="40sp"
             android:layout_margin="5sp"
             android:src="@drawable/sorceress"
-            android:background="@color/black"/>
+            app:tint="@color/black"/>
       
     </LinearLayout>
 
