--- a/app/src/main/res/layout/character_list_item.xml
+++ b/app/src/main/res/layout/character_list_item.xml
@@ -25,7 +25,7 @@
             android:layout_width="80sp"
             android:layout_height="80sp"
             android:layout_margin="10sp"
-            app:srcCompat="@drawable/lion_sample"
+            app:srcCompat="@drawable/lostark"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
