--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -26,7 +26,7 @@
             android:layout_height="120sp"
             android:layout_gravity="center_vertical"
             android:padding="5sp"
-            app:srcCompat="@drawable/lion_sample" />
+            app:srcCompat="@drawable/lostark" />
 
         <LinearLayout
             android:layout_width="match_parent"
