--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -6,18 +6,18 @@
         android:id="@+id/tab1"
         app:showAsAction="ifRoom"
         android:enabled="true"
-        android:icon="@drawable/people_test"
+        android:icon="@drawable/people_icon"
         android:title="캐릭터 관리"/>
     <item
         android:id="@+id/tab2"
         app:showAsAction="ifRoom"
         android:enabled="true"
-        android:icon="@drawable/check_test"
+        android:icon="@drawable/check_icon"
         android:title="체크리스트"/>
     <item
         android:id="@+id/tab3"
         app:showAsAction="ifRoom"
         android:enabled="true"
-        android:icon="@drawable/calendar_test"
+        android:icon="@drawable/calendar_icon"
         android:title="일정 관리"/>
 </menu>
